--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,2 @@
-    MONGO_URI="mongodb+srv://shakedshoshan:771U2HuEZSRsGNyt@backenddb.pln6t9i.mongodb.net/?retryWrites=true&w=majority&appName=backendDB"
+
+    MONGO_URI="SECRET"
